--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="/assets/css/fonts.css">
-<link rel="stylesheet" href="/assets/css/index.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/fonts.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/index.css">
