💄 switch to Tailwind CDN for styling

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,7 @@
+<!-- _includes/head.html -->
+
+<!-- Tailwind CSS CDN (최신 안정 버전) -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- 폰트 스타일 (필요한 경우) -->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/fonts.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/index.css">
