🛠 Set up Tailwind + Jekyll + GitHub Actions build pipeline

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <!-- _includes/head.html -->
 
-<!-- Tailwind CSS CDN (최신 안정 버전) -->
-<script src="https://cdn.tailwindcss.com"></script>
+<!-- Tailwind Build Output CSS -->
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/output.css">
 
-<!-- 폰트 스타일 (필요한 경우) -->
+<!-- Pretendard 폰트 or 기타 웹폰트 -->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/fonts.css">
